[project]
name = "sqlite-chronicle"
version = "0.3"
description = "Use triggers to maintain a chronicle table of updated/deleted timestamps in SQLite"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers = [
    "Topic :: Database",
    "Programming Language :: SQL"
]

[project.urls]
Homepage = "https://github.com/simonw/sqlite-chronicle"
Changelog = "https://github.com/simonw/sqlite-chronicle/releases"
Issues = "https://github.com/simonw/sqlite-chronicle/issues"
CI = "https://github.com/simonw/sqlite-chronicle/actions"

[project.optional-dependencies]
test = ["pytest", "sqlite-utils>=4.0a0"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sqlite_chronicle"]
